--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#2563eb" />
   <title>RASFE Electric, LLC — Electrician in Houma, LA</title>
   <meta name="description" content="Professional electrician in Houma since 1996. Commercial, industrial, residential, restaurant equipment repair, landscape lighting, inspections & consulting. Licensed #62844. BBB Accredited (A+)." />
   <link rel="icon" href="/assets/favicon.ico" />
   <style>
     :root { --bg:#f8fafc; --card:#ffffff; --muted:#475569; --text:#0f172a; --brand:#2563eb; --brand-600:#1d4ed8; --radius:14px; --shadow:0 6px 20px rgba(2,6,23,.08); --max:1100px; }
-    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.7 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    *{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--text);font:16px/1.7 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;-webkit-text-size-adjust:100%}
     img{max-width:100%;display:block;border-radius:12px;object-fit:cover;aspect-ratio:4/3}
     a{color:var(--brand)} a:hover{text-decoration:underline}
     .container{max-width:var(--max);margin-inline:auto;padding:clamp(16px,3vw,28px)}
     header{background:#fff;border-bottom:1px solid #e2e8f0;position:sticky;top:0;z-index:50}
     .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    .actions{display:flex;gap:10px;flex-wrap:wrap}
     .brand{font-weight:800} .subtle{color:#334155;font-size:14px}
     .btn{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:999px;background:var(--brand);color:#fff;font-weight:700;border:1px solid var(--brand)}
     .btn:hover{background:var(--brand-600)}
@@ -34,7 +36,25 @@
     input:focus, textarea:focus{outline:3px solid #94a3b8;outline-offset:1px}
     .hint{color:#64748b;font-size:14px}
     footer{background:#1f2937;color:#f9fafb;margin-top:24px} footer small{color:#e5e7eb}
-    @media(max-width:880px){.grid{grid-template-columns:1fr} .hero .container{padding-top:46px;padding-bottom:46px} .contact-card{grid-template-columns:1fr} }
+
+    /* ===== Mobile polish ===== */
+    @media (max-width: 720px) {
+      .nav { flex-direction: column; align-items: flex-start; gap: 10px; }
+      .actions a { flex: 1; min-width: 140px; justify-content: center; padding: 10px 12px; font-size: 15px; }
+      .hero .container { padding-top: 46px; padding-bottom: 46px; }
+      h1 { font-size: 1.85rem; text-align: center; }
+      .hero p { text-align: center; font-size: 0.96rem; }
+      .badge { font-size: 13px; padding: 4px 8px; }
+      .grid { grid-template-columns: 1fr; gap: 22px; }
+      .card { padding: 14px; }
+      .contact-card { grid-template-columns: 1fr; padding: 16px; }
+      input, textarea, button { font-size: 16px; } /* prevents iOS zoom */
+      footer small { line-height: 1.6; }
+    }
+    @media (max-width: 480px) {
+      .container { padding: 16px; }
+      .yelp-badge { width: 100%; justify-content: center; }
+    }
   </style>
 
   <script type="application/ld+json">
