--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
     /* ===== Mobile polish ===== */
     @media (max-width: 720px) {
       .nav { flex-direction: column; align-items: flex-start; gap: 10px; }
-      .actions a { flex: 1; min-width: 140px; justify-content: center; padding: 10px 12px; font-size: 15px; }
+      .actions a {
+  flex: 1;
+  justify-content: center;
+  padding: 8px 10px;      /* smaller padding */
+  font-size: 14px;        /* smaller text */
+  border-radius: 8px;     /* tighter corners */
+  line-height: 1.2;
+}
+.btn { padding: 10px 14px; font-size: 15px; } /* overall base shrink */
       .hero .container { padding-top: 46px; padding-bottom: 46px; }
       h1 { font-size: 1.85rem; text-align: center; }
       .hero p { text-align: center; font-size: 0.96rem; }
